# platelet-unet-watershed

./: LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.napari/: config.yml
docs/: conf.py  index.rst
plateseg/: __init__.py  _dock_widget.py  predict.py  unet.py  watershed.py
plateseg/_tests/: test_dock_widget.py
