[metadata]
name = platelet-unet-watershed
version = 0.0.1
author = Juan Nunez-Iglesias & Abigail McGovern
author_email = juan.nunez-iglesias@monash.edu
license = BSD-3
url = https://github.com/jni/platelet-unet-watershed
description = Segment platelets with pretrained unet and affinity watershed
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jni/platelet-unet-watershed/issues
    Documentation = 'https://github.com/jni/platelet-unet-watershed#README.md'
    Source Code = https://github.com/jni/platelet-unet-watershed
    User Support = https://github.com/jni/platelet-unet-watershed/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    platelet-unet-watershed = plateseg
